	PR tree-optimization/42027 	* dojump.c (do_jump <TRUTH_AND_EXPR, TRUTH_OR_EXPR>): Go to 	TRUTH_ANDIF_EXPR resp. TRUTH_ORIF_EXPR expander, instead of 	falling through.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155196 138bc75d-0d04-0410-961f-82ee72b054a4